PP-1 correção de baseUrl e adição de infra

--- a/source/angular.json
+++ b/source/angular.json
@@ -32,7 +32,7 @@
               "fileReplacements": [
                 {
                   "replace": "web/environments/environment.ts",
-                  "with": "web/environments/environment.prod.ts"
+                  "with": "web/environments/environment.ts"
                 }
               ],
               "optimization": true,
