--- a/infra/otus-app.conf
+++ b/infra/otus-app.conf
@@ -4,6 +4,7 @@ server {
 
   add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
   add_header Set-Cookie "OTUS_API=${API_URL};";
+  add_header Set-Cookie 'PREVIEW_ADDRESS=${PREVIEW_ADDRESS};Path=/';
   if_modified_since off;
   expires off;
   etag off;
