token max age 0

--- a/infra/otus-app.conf
+++ b/infra/otus-app.conf
@@ -3,7 +3,7 @@ server {
   server_name ${NGINX_HOST};
 
   add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-  add_header Set-Cookie "OTUS_API=${API_URL};";
+  add_header Set-Cookie "OTUS_API=${API_URL};Path=/";
   add_header Set-Cookie 'PREVIEW_ADDRESS=${PREVIEW_ADDRESS};Path=/';
   if_modified_since off;
   expires off;
