PP-5 Troca de nome do aplicativo Papp

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Otus App",
-  "short_name": "Otus App",
+  "name": "Papp",
+  "short_name": "Papp",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
