--- a/source/angular.json
+++ b/source/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "otus-app": {
+    "papp": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/otus-app/",
+            "outputPath": "dist/papp/",
             "index": "web/index.html",
             "main": "web/main.ts",
             "polyfills": "web/polyfills.ts",
@@ -51,18 +51,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "otus-app:build"
+            "browserTarget": "papp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "otus-app:build:production"
+              "browserTarget": "papp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "otus-app:build"
+            "browserTarget": "papp:build"
           }
         },
         "test": {
@@ -98,7 +98,7 @@
         }
       }
     },
-    "otus-app-e2e": {
+    "papp-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -106,7 +106,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "otus-app:serve"
+            "devServerTarget": "papp:serve"
           }
         },
         "lint": {
@@ -121,5 +121,5 @@
       }
     }
   },
-  "defaultProject": "otus-app"
+  "defaultProject": "papp"
 }
