PP-6 Ajuste para registro do service worker

--- a/source/angular.json
+++ b/source/angular.json
@@ -44,7 +44,8 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "serviceWorker": true
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
