--- a/source/package.json
+++ b/source/package.json
@@ -27,14 +27,14 @@
     "@angular/service-worker": "8.2.14",
     "core-js": "3.4.7",
     "material-design-icons": "3.0.1",
-    "ngx-cookie": "^4.1.2",
-    "ngx-cookie-service": "^2.2.0",
+    "ngx-cookie": "4.1.2",
+    "ngx-cookie-service": "2.2.0",
     "rxjs": "6.5.3",
     "rxjs-compat": "6.5.3",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/build-angular": "0.803.21",
     "@angular/cli": "8.3.20",
     "@angular/compiler-cli": "8.2.14",
     "@angular/language-service": "8.2.14",
