--- a/source/package.json
+++ b/source/package.json
@@ -26,6 +26,8 @@
     "@angular/router": "8.2.14",
     "@angular/service-worker": "8.2.14",
     "core-js": "3.4.7",
+    "html2pdf.js": "^0.9.2",
+    "jspdf": "^1.5.3",
     "material-design-icons": "3.0.1",
     "ngx-cookie": "4.1.2",
     "ngx-cookie-service": "2.2.0",
