--- a/source/package.json
+++ b/source/package.json
@@ -31,6 +31,7 @@
     "material-design-icons": "3.0.1",
     "ngx-cookie": "4.1.2",
     "ngx-cookie-service": "2.2.0",
+    "ngx-infinite-scroll": "^9.0.0",
     "rxjs": "6.5.3",
     "rxjs-compat": "6.5.3",
     "zone.js": "0.10.2"
