--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -12,11 +12,12 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "./web/**/*.ts"
