--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -16,8 +16,8 @@
       "es2017",
       "dom"
     ],
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+    "resolveJsonModule": true
+
   },
   "include": [
     "./web/**/*.ts"
