AP-12 ajuste no mecanismo para receber imagens padronizadas logo(128px) e favicon(32px)

--- a/source/angular.json
+++ b/source/angular.json
@@ -24,7 +24,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "web/assets",
-              "manifest.json"
+              "manifest.json",
+              "favicon.ico"
             ],
             "styles": [
               "web/styles.scss"
@@ -125,5 +126,5 @@
       }
     }
   },
-  "defaultProject": "papp"
+  "defaultProject": "Papp"
 }
