AP-12 definição de favicon e icones via visual-identity

--- a/source/angular.json
+++ b/source/angular.json
@@ -24,8 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "web/assets",
-              "manifest.json",
-              "favicon.ico"
+              "manifest.json"
             ],
             "styles": [
               "web/styles.scss"
