--- a/source/web/assets/visual-identity/manifest.json
+++ b/source/web/assets/visual-identity/manifest.json
@@ -9,7 +9,7 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "img/android-chrome-512x512.png",
+      "src": "img/icon_pwa.png",
       "sizes": "512x512",
       "type": "image/png"
     }
