AP-19 troca das imagens e titulo do elsa

--- a/source/web/assets/visual-identity/manifest.json
+++ b/source/web/assets/visual-identity/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ELSA-Brasil",
-  "short_name": "ELSA-Brasil",
+  "name": "PAPP",
+  "short_name": "PAPP",
   "theme_color": "#000000",
   "background_color": "#fafafa",
   "display": "standalone",
